# finetuning-workshop

./: .gitignore  QLoRA.ipynb  data-cleaning.ipynb  data-prep.ipynb  finetuning.ipynb  pyproject.toml  readme.md  run.ipynb
